<resources>
    <string name="app_name">MyCalendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_list">Task List</string>
    <string name="task_icon">Task Icon</string>
    <string name="task">Task</string>
    <string name="icon_setting">Icon Setting</string>
    <string name="setting">Setting</string>
    <string name="icon_add">Icon Add</string>
    <string name="judul">Judul</string>
    <string name="catatan">Catatan</string>
    <string name="simpan">Simpan</string>
    <string name="hallo_sam">Hallo, Sam!</string>
    <string name="_3_task_for_today">0 Task for today</string>
    <string name="selasa_feb_16_2021">Selasa, Feb 16 2021</string>
    <string name="s">S</string>
    <string name="_11">11</string>
</resources>