<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    android:background="@drawable/bg_date_unselected"
    android:backgroundTint="@color/white"
    android:elevation="6dp"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textColor="@color/blue_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/catatan"
        android:textColor="@color/blue_primary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_date_unselected"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/simpan"
        android:textColor="@color/white" />

</LinearLayout>